force-app/main/default/objects/Case/fields/JIRA_End_User_Type__c.field-meta.xml
<CustomField>
    <fullName>JIRA_End_User_Type__c</fullName>
    <label>End User Type</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Admin</fullName>
            </value>
            <value>
                <fullName>Advisor</fullName>
            </value>
            <value>
                <fullName>Interested Party</fullName>
            </value>
            <value>
                <fullName>Participant</fullName>
            </value>
            <value>
                <fullName>Sponsor</fullName>
            </value>
            <value>
                <fullName>TPA</fullName>
            </value>
            <value>
                <fullName>Trustee</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>