force-app/main/default/objects/Case/fields/JIRA_Priority__c.field-meta.xml
<CustomField>
    <fullName>JIRA_Priority__c</fullName>
    <description>High = 1 Plan affected
Medium = 1 Participant affected
Low = Not Plan or participant dependent</description>
    <inlineHelpText>High = 1 Plan affected
Medium = 1 Participant affected
Low = Not Plan or participant dependent</inlineHelpText>
    <label>JIRA Priority</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>High</fullName>
            </value>
            <value>
                <fullName>Medium</fullName>
            </value>
            <value>
                <fullName>Low</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>