force-app/main/default/objects/Case/fields/JIRA_Severity__c.field-meta.xml
<CustomField>
    <fullName>JIRA_Severity__c</fullName>
    <label>Severity</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>SEV-1</fullName>
            </value>
            <value>
                <fullName>SEV-2</fullName>
            </value>
            <value>
                <fullName>SEV-3</fullName>
            </value>
            <value>
                <fullName>SEV-4</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>