force-app/main/default/objects/Case/fields/JIRA_Status__c.field-meta.xml
<CustomField>
    <fullName>JIRA_Status__c</fullName>
    <description>Status in JIRA</description>
    <inlineHelpText>Status in JIRA</inlineHelpText>
    <label>JIRA Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Open</fullName>
            </value>
            <value>
                <fullName>Needs Information</fullName>
            </value>
            <value>
                <fullName>On Hold</fullName>
            </value>
            <value>
                <fullName>Approved</fullName>
            </value>
            <value>
                <fullName>In Progress</fullName>
            </value>
            <value>
                <fullName>Reopened</fullName>
            </value>
            <value>
                <fullName>In QA</fullName>
            </value>
            <value>
                <fullName>Ready for Ephibian</fullName>
            </value>
            <value>
                <fullName>Ready for Production</fullName>
            </value>
            <value>
                <fullName>Deployed to Production</fullName>
            </value>
            <value>
                <fullName>Verified</fullName>
            </value>
            <value>
                <fullName>Closed</fullName>
            </value>
            <value>
                <fullName>To Do</fullName>
            </value>
            <value>
                <fullName>Pending Priority</fullName>
            </value>
            <value>
                <fullName>Pending Dev</fullName>
            </value>
            <value>
                <fullName>In Dev</fullName>
            </value>
            <value>
                <fullName>In UAT</fullName>
            </value>
            <value>
                <fullName>Done</fullName>
            </value>
            <value>
                <fullName>Won&apos;t Do</fullName>
            </value>
            <value>
                <fullName>New</fullName>
            </value>
            <value>
                <fullName>Response Received</fullName>
            </value>
            <value>
                <fullName>Backlog Consideration</fullName>
            </value>
            <value>
                <fullName>Final Review</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>