force-app/main/default/objects/Case/fields/JIRA_Ticket_Number__c.field-meta.xml
<CustomField>
    <fullName>JIRA_Ticket_Number__c</fullName>
    <description>JIRA Ticket Number</description>
    <inlineHelpText>JIRA Ticket Number</inlineHelpText>
    <label>JIRA Ticket Number</label>
    <length>18</length>
    <type>Text</type>
</CustomField>