force-app/main/default/objects/Case/fields/JIRA_Ticket_Owner__c.field-meta.xml
<CustomField>
    <fullName>JIRA_Ticket_Owner__c</fullName>
    <description>Ticket Owner in JIRA</description>
    <inlineHelpText>Ticket Owner in JIRA</inlineHelpText>
    <label>JIRA Ticket Owner</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Amber Fording</fullName>
                <isActive>false</isActive>
                <label>Amber Fording</label>
            </value>
            <value>
                <fullName>Anne-Marie De Martini</fullName>
            </value>
            <value>
                <fullName>Brandon Check</fullName>
            </value>
            <value>
                <fullName>Christopher D&apos;Ambrosio</fullName>
            </value>
            <value>
                <fullName>Darrell Jernigan</fullName>
            </value>
            <value>
                <fullName>Harrison Vo</fullName>
            </value>
            <value>
                <fullName>Katie Reilly</fullName>
            </value>
            <value>
                <fullName>Ken Simons</fullName>
                <isActive>false</isActive>
                <label>Ken Simons</label>
            </value>
            <value>
                <fullName>Reesha Rajen</fullName>
            </value>
            <value>
                <fullName>Sue Cascio</fullName>
            </value>
            <value>
                <fullName>Vicky Gutierrez</fullName>
            </value>
            <value>
                <fullName>Victor Rose</fullName>
            </value>
            <value>
                <fullName>Will Grigoratos</fullName>
                <isActive>false</isActive>
                <label>Will Grigoratos</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>