force-app/main/default/objects/Case/fields/Last_Activity_Date__c.field-meta.xml
<CustomField>
    <fullName>Last_Activity_Date__c</fullName>
    <description>Date of Last Activity on the Case</description>
    <inlineHelpText>Date of Last Activity on the Case</inlineHelpText>
    <label>Last Activity Date</label>
    <type>DateTime</type>
</CustomField>