force-app/main/default/objects/Case/fields/Last_Health_Check_Date__c.field-meta.xml
<CustomField>
    <fullName>Last_Health_Check_Date__c</fullName>
    <description>Most recent client health check date for plan linked to this case</description>
    <formula>Plan__r.Last_Health_Check_Date__c</formula>
    <inlineHelpText>Most recent client health check date for plan linked to this case</inlineHelpText>
    <label>Last Health Check Date</label>
    <type>Date</type>
</CustomField>