force-app/main/default/objects/Case/fields/Last_Health_Check_Type__c.field-meta.xml
<CustomField>
    <fullName>Last_Health_Check_Type__c</fullName>
    <description>Most recent client health check type for plan linked to this case</description>
    <formula>TEXT(Plan__r.Recent_Client_Health_Check_Type__c)</formula>
    <inlineHelpText>Most recent client health check type for plan linked to this case</inlineHelpText>
    <label>Last Health Check Type</label>
    <type>Text</type>
</CustomField>