force-app/main/default/objects/Case/fields/Last_Inbound_Activity__c.field-meta.xml
<CustomField>
    <fullName>Last_Inbound_Activity__c</fullName>
    <description>Date of last inbound activity on this case</description>
    <inlineHelpText>Date of last inbound activity on this case</inlineHelpText>
    <label>Last Inbound Activity</label>
    <type>Date</type>
</CustomField>