force-app/main/default/objects/Case/fields/Liquidate_Forfeitures__c.field-meta.xml
<CustomField>
    <fullName>Liquidate_Forfeitures__c</fullName>
    <description>Verify if forfeitures should be liquidated and if so, should they move to cash or be used to pay invoices.</description>
    <inlineHelpText>Verify if forfeitures should be liquidated and if so, should they move to cash or be used to pay invoices.</inlineHelpText>
    <label>Liquidate Forfeitures?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>N/A</fullName>
            </value>
            <value>
                <fullName>Move to Cash</fullName>
            </value>
            <value>
                <fullName>Pay Invoices</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>