force-app/main/default/objects/Case/fields/List_Link__c.field-meta.xml
<CustomField>
    <fullName>List_Link__c</fullName>
    <description>Link for list requests</description>
    <label>List Link</label>
    <type>Url</type>
</CustomField>