force-app/main/default/objects/Case/fields/lntcss__Splited_From__c.field-meta.xml
<CustomField>
    <fullName>lntcss__Splited_From__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Links back to the original Case the email was Split from</inlineHelpText>
    <label>Splited From</label>
    <referenceTo>Case</referenceTo>
    <relationshipLabel>Cases</relationshipLabel>
    <relationshipName>Cases</relationshipName>
    <type>Lookup</type>
</CustomField>