force-app/main/default/objects/Case/fields/Look_Up_Name_Count__c.field-meta.xml
<CustomField>
    <fullName>Look_Up_Name_Count__c</fullName>
    <description>Number of ex-employee(s) client wants Ubiquity to locate addresses for before forcing out distributions</description>
    <inlineHelpText>Used for calculating total bill amount</inlineHelpText>
    <label>Look Up Name Count</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>