force-app/main/default/objects/Case/fields/Look_Up_Name_List__c.field-meta.xml
<CustomField>
    <fullName>Look_Up_Name_List__c</fullName>
    <description>List of ex-employee(s) client requested locate services for</description>
    <inlineHelpText>List of ex-employee(s) client requested locate services for</inlineHelpText>
    <label>Look Up Name List</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>