force-app/main/default/objects/Case/fields/Marketing_Stage__c.field-meta.xml
<CustomField>
    <fullName>Marketing_Stage__c</fullName>
    <label>Marketing Stage</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Marketing Review #1</fullName>
            </value>
            <value>
                <fullName>Requester Review #1</fullName>
            </value>
            <value>
                <fullName>Marketing Review #2</fullName>
            </value>
            <value>
                <fullName>Requester Final Review</fullName>
            </value>
            <value>
                <fullName>Compliance Review</fullName>
            </value>
            <value>
                <fullName>Completed</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
                <isActive>false</isActive>
                <label>Other</label>
            </value>
            <value>
                <fullName>Requester Clarification</fullName>
                <isActive>false</isActive>
                <label>Requester Clarification</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>