force-app/main/default/objects/Case/fields/Most_Recent_1099R__c.field-meta.xml
<CustomField>
    <fullName>Most_Recent_1099R__c</fullName>
    <description>Date of most recent distribution for abandoned plan risk review.   If blank, the plan has no record of a 1099R in the past 12 months.</description>
    <inlineHelpText>Date of most recent distribution for abandoned plan risk review.   If blank, the plan has no record of a 1099R in the past 12 months.</inlineHelpText>
    <label>Most Recent 1099R</label>
    <type>Date</type>
</CustomField>