force-app/main/default/objects/Case/fields/Most_Recent_Payroll__c.field-meta.xml
<CustomField>
    <fullName>Most_Recent_Payroll__c</fullName>
    <formula>Plan__r.Most_Recent_Payroll__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Most Recent Payroll</label>
    <type>Date</type>
</CustomField>