force-app/main/default/objects/Case/fields/Most_Recent_Payroll_Submitted__c.field-meta.xml
<CustomField>
    <fullName>Most_Recent_Payroll_Submitted__c</fullName>
    <description>Date of most recent payroll submission in Paradigm</description>
    <inlineHelpText>Date of most recent payroll submission in Paradigm</inlineHelpText>
    <label>Most Recent Payroll Submitted</label>
    <type>Date</type>
</CustomField>