force-app/main/default/objects/Case/fields/n2de__Is_archived__c.field-meta.xml
<CustomField>
    <fullName>n2de__Is_archived__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is archived</label>
    <type>Checkbox</type>
</CustomField>