force-app/main/default/objects/Case/fields/Number_of_Child_Cases_Closed__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Child_Cases_Closed__c</fullName>
    <defaultValue>0</defaultValue>
    <description>This field counts the number of Child Cases Closed.</description>
    <inlineHelpText>This field counts the number of Child Cases Closed.</inlineHelpText>
    <label>Number of Child Cases Closed</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>