force-app/main/default/objects/Case/fields/Number_of_Participants_to_Adjust__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Participants_to_Adjust__c</fullName>
    <description>Entered by Operations - verifies number of participants included in an adjustment operation</description>
    <inlineHelpText>Entered by Operations - verifies number of participants included in an adjustment operation</inlineHelpText>
    <label>Number of Participants to Adjust</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>