force-app/main/default/objects/Case/fields/Original_Check_Date__c.field-meta.xml
<CustomField>
    <fullName>Original_Check_Date__c</fullName>
    <description>Reissue request field</description>
    <inlineHelpText>Date of original distribution check</inlineHelpText>
    <label>Original Check Date</label>
    <type>Date</type>
</CustomField>