force-app/main/default/objects/Case/fields/Original_Close_Date_Time__c.field-meta.xml
<CustomField>
    <fullName>Original_Close_Date_Time__c</fullName>
    <description>Created for SLA calculation</description>
    <label>Original Close Date Time</label>
    <type>DateTime</type>
</CustomField>