force-app/main/default/objects/Case/fields/original_number__c.field-meta.xml
<CustomField>
    <fullName>original_number__c</fullName>
    <description>Used to preserve original case number for ownbackup</description>
    <label>Original Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>