force-app/main/default/objects/Case/fields/Original_Plan_Year__c.field-meta.xml
<CustomField>
    <fullName>Original_Plan_Year__c</fullName>
    <description>Plan year (YYYY) funds are currently in for adjustments</description>
    <inlineHelpText>Plan year (YYYY) funds are currently in for adjustments</inlineHelpText>
    <label>Original Plan Year</label>
    <length>4</length>
    <type>Text</type>
</CustomField>