force-app/main/default/objects/Case/fields/Overnight_check_detail__c.field-meta.xml
<CustomField>
    <fullName>Overnight_check_detail__c</fullName>
    <description>Reissue request field</description>
    <inlineHelpText>Verify FedEx, UPS, etc account # details for overnight checks</inlineHelpText>
    <label>Overnight check detail</label>
    <length>200</length>
    <type>Text</type>
</CustomField>