force-app/main/default/objects/Case/fields/Paradigm_Plan_Link__c.field-meta.xml
<CustomField>
    <fullName>Paradigm_Plan_Link__c</fullName>
    <formula>Plan__r.Paradigm_Plan_Link__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Paradigm Plan Link</label>
    <type>Text</type>
</CustomField>