force-app/main/default/objects/Case/fields/Partner__c.field-meta.xml
<CustomField>
    <fullName>Partner__c</fullName>
    <description>Clients with shared SLAs will appear here.</description>
    <formula>IF(ISBLANK( Plan__c),  Account.Partner_Logo__c,  Plan__r.Partner__c)</formula>
    <inlineHelpText>Clients with shared SLAs will appear here.</inlineHelpText>
    <label>Partner</label>
    <type>Text</type>
</CustomField>