force-app/main/default/objects/Case/fields/Past_Due_5500__c.field-meta.xml
<CustomField>
    <fullName>Past_Due_5500__c</fullName>
    <description>For Abandoned Plan Review cases - are there any older 5500s that haven&apos;t been filed?</description>
    <inlineHelpText>For Abandoned Plan Review cases - are there any older 5500s that haven&apos;t been filed?</inlineHelpText>
    <label>Past Due 5500</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>