force-app/main/default/objects/Case/fields/Past_Due_Payroll_Survey_Link__c.field-meta.xml
<CustomField>
    <fullName>Past_Due_Payroll_Survey_Link__c</fullName>
    <description>Hidden field to generate URL for unique Past Due Payroll Survey</description>
    <formula>&quot;http://myubiquity.force.com/survey?ratingType=3&amp;RecordTypeId=0121G000000TjeQQAS&amp;fieldset=Past_Due_Payroll_COVID19&amp;lang=en_US&amp;radioPicklistOptions=false&amp;simplesurvey__Account__c=&quot; +  AccountId  + 
&quot;&amp;simplesurvey__Contact__c=&quot; +  ContactId +
&quot;&amp;Plan__c=&quot; +  Plan__c + 
&quot;&amp;simplesurvey__Case__c=&quot; +  Id</formula>
    <inlineHelpText>Hidden field to generate URL for unique Past Due Payroll Survey</inlineHelpText>
    <label>Past Due Payroll Survey Link</label>
    <type>Text</type>
</CustomField>