force-app/main/default/objects/Case/fields/Past_Due_Survey_Received__c.field-meta.xml
<CustomField>
    <fullName>Past_Due_Survey_Received__c</fullName>
    <description>Date past due payroll survey was received</description>
    <inlineHelpText>Date past due payroll survey was received</inlineHelpText>
    <label>Past Due Survey Received</label>
    <type>Date</type>
</CustomField>