force-app/main/default/objects/Case/fields/Past_Due_Survey_Sent__c.field-meta.xml
<CustomField>
    <fullName>Past_Due_Survey_Sent__c</fullName>
    <description>Date Past Due survey email was sent</description>
    <inlineHelpText>Date Past Due survey email was sent</inlineHelpText>
    <label>Past Due Survey Sent</label>
    <type>Date</type>
</CustomField>