force-app/main/default/objects/Case/fields/Payroll_ID__c.field-meta.xml
<CustomField>
    <fullName>Payroll_ID__c</fullName>
    <description>Enter Payroll ID if there is one - if not, enter &quot;N/A&quot;</description>
    <inlineHelpText>Enter Payroll ID if there is one - if not, enter &quot;N/A&quot;</inlineHelpText>
    <label>Payroll ID</label>
    <length>10</length>
    <type>Text</type>
</CustomField>