force-app/main/default/objects/Case/fields/Payroll_Schedule__c.field-meta.xml
<CustomField>
    <fullName>Payroll_Schedule__c</fullName>
    <formula>TEXT(Plan__r.Payroll_Schedule__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Payroll Schedule</label>
    <type>Text</type>
</CustomField>