force-app/main/default/objects/Case/fields/Person__c.field-meta.xml
<CustomField>
    <fullName>Person__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Person</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Person__c.Name</field>
            <operation>notEqual</operation>
            <value>Billing Invoices</value>
        </filterItems>
        <filterItems>
            <field>Person__c.Name</field>
            <operation>notEqual</operation>
            <value>Operations</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Person__c</referenceTo>
    <relationshipLabel>Cases</relationshipLabel>
    <relationshipName>Cases</relationshipName>
    <type>Lookup</type>
</CustomField>