force-app/main/default/objects/Case/fields/Plan07CNumber__c.field-meta.xml
<CustomField>
    <fullName>Plan07CNumber__c</fullName>
    <formula>Plan__r.Matrix_07C_Account__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Plan07CNumber</label>
    <type>Text</type>
</CustomField>