force-app/main/default/objects/Case/fields/Plan__c.field-meta.xml
<CustomField>
    <fullName>Plan__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Plan this case is associated with.   Select &quot;Multiple Plans/Unidentified Plan&quot; if the case is regarding more than one plan or a not a specific plan.</description>
    <inlineHelpText>Plan this case is associated with.   Select &quot;Multiple Plans/Unidentified Plan&quot; if the case is regarding more than one plan or a not a specific plan.</inlineHelpText>
    <label>Plan</label>
    <referenceTo>Plan__c</referenceTo>
    <relationshipLabel>Cases</relationshipLabel>
    <relationshipName>Cases</relationshipName>
    <type>Lookup</type>
</CustomField>