force-app/main/default/objects/Case/fields/Plan_over_125_EEs__c.field-meta.xml
<CustomField>
    <fullName>Plan_over_125_EEs__c</fullName>
    <description>Verify if the plan is over 125 Employees as it will impact the adjustment process</description>
    <inlineHelpText>Verify if the plan is over 125 Employees as it will impact the adjustment process</inlineHelpText>
    <label>Plan over 125 EEs?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>