force-app/main/default/objects/Case/fields/Plan_Payroll_Status__c.field-meta.xml
<CustomField>
    <fullName>Plan_Payroll_Status__c</fullName>
    <formula>TEXT(Plan__r.Payroll_Submission_Status__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Plan Payroll Status</label>
    <type>Text</type>
</CustomField>