force-app/main/default/objects/Case/fields/Plan_Value__c.field-meta.xml
<CustomField>
    <fullName>Plan_Value__c</fullName>
    <description>Plan value based on employee count and service option.  Prefers tunneling through plan to account b/c of cases where &quot;account&quot; is an advisor/other account besides plan owner.</description>
    <formula>BLANKVALUE(TEXT(Plan__r.Account__r.Plan_Value__c), TEXT(Account.Plan_Value__c))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Plan Value</label>
    <type>Text</type>
</CustomField>