force-app/main/default/objects/Case/fields/PlanAccountNumber__c.field-meta.xml
<CustomField>
    <fullName>PlanAccountNumber__c</fullName>
    <description>Hidden field to pull in CustID Number for Rollover Merge Templates</description>
    <formula>Plan__r.Custodian_Account_ID__c</formula>
    <inlineHelpText>Hidden field to pull in CustID Number for Rollover Merge Templates</inlineHelpText>
    <label>PlanAccountNumber</label>
    <type>Text</type>
</CustomField>