force-app/main/default/objects/Case/fields/Portfolio_Name__c.field-meta.xml
<CustomField>
    <fullName>Portfolio_Name__c</fullName>
    <description>Used by Fin Ops for Fund Change cases</description>
    <label>Portfolio Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>