force-app/main/default/objects/Case/fields/Preferred_Completion_Date__c.field-meta.xml
<CustomField>
    <fullName>Preferred_Completion_Date__c</fullName>
    <description>Date the requestor would like the request by.</description>
    <inlineHelpText>Date the requestor would like the request by.</inlineHelpText>
    <label>Preferred Completion Date</label>
    <type>Date</type>
</CustomField>