force-app/main/default/objects/Case/fields/Primary_Audience__c.field-meta.xml
<CustomField>
    <fullName>Primary_Audience__c</fullName>
    <description>Primary audience of marketing cases.</description>
    <inlineHelpText>Primary audience of marketing cases.</inlineHelpText>
    <label>Primary Audience</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Advisors</fullName>
            </value>
            <value>
                <fullName>Clients</fullName>
            </value>
            <value>
                <fullName>Internal</fullName>
            </value>
            <value>
                <fullName>Partners</fullName>
            </value>
            <value>
                <fullName>Prospects</fullName>
            </value>
            <value>
                <fullName>Savers</fullName>
            </value>
            <value>
                <fullName>Single(k)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>