force-app/main/default/objects/Case/fields/Priority_Service__c.field-meta.xml
<CustomField>
    <fullName>Priority_Service__c</fullName>
    <formula>Plan__r.Priority_Service_Formula__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>If the plan has priority service, this box is checked. To remove Priority Service, uncheck the box on the plan record or enter a date in the Priority Service End Date field and it will be removed when the date entered is reached.</inlineHelpText>
    <label>Priority Service</label>
    <type>Checkbox</type>
</CustomField>