force-app/main/default/objects/Case/fields/Project_Deliverable__c.field-meta.xml
<CustomField>
    <fullName>Project_Deliverable__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Project Deliverable</label>
    <lookupFilter>
        <active>true</active>
        <errorMessage>Please select a case project deliverable</errorMessage>
        <filterItems>
            <field>Project_Deliverables__c.Work_Breakdown_Structure__r.Object_Managed__c</field>
            <operation>equals</operation>
            <value>Case</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Project_Deliverables__c</referenceTo>
    <relationshipLabel>Cases</relationshipLabel>
    <relationshipName>Cases</relationshipName>
    <type>Lookup</type>
</CustomField>